# app/controllers/api/v1/queries_controller.rb
@@ -1,0 +1,70 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    class QueriesController < Api::BaseController
+      def index
+        execute_tool(
+          action_type: 'query.list',
+          payload: {
+            'search' => params[:search].to_s.presence,
+            'data_source_id' => params[:data_source_id].presence&.to_i
+          }.compact
+        )
+      end
+
+      def run
+        execute_tool(
+          action_type: 'query.run',
+          payload: run_payload
+        )
+      end
+
+      def create
+        execute_tool(
+          action_type: 'query.save',
+          payload: save_payload
+        )
+      end
+
+      private
+
+      def run_payload
+        query_request_payload.merge(data_source_reference_payload).compact
+      end
+
+      def save_payload
+        query_save_payload
+          .merge(data_source_reference_payload)
+          .merge(query_name_payload)
+          .compact
+      end
+
+      def query_request_payload
+        {
+          'question' => params[:question].presence || params[:sql].to_s
+        }
+      end
+
+      def query_save_payload
+        {
+          'sql' => params[:sql].to_s,
+          'question' => params[:question].to_s.presence
+        }
+      end
+
+      def data_source_reference_payload
+        {
+          'data_source_id' => params[:data_source_id].presence&.to_i,
+          'data_source_name' => params[:data_source_name].to_s.presence
+        }
+      end
+
+      def query_name_payload
+        {
+          'name' => params[:name].to_s.presence
+        }
+      end
+    end
+  end
+end
